# modern-cpp-training

./: ModernCpp.tex  README.md
examples/EmployeeDb/: CMakeLists.txt
examples/EmployeeDb/src/: EmployeesDb.cpp  EmployeesDb.hpp  EmployeesDbTest.cpp
training-2017/: ModernCpp.tex
training-2017/examples/EmployeeDb/src/: TestPerf.cpp
training-2018/: presentation.md
training-2018/examples/: serialization_json.cpp
training-2018/resources/: impedance.tex  template_example.pgs  vector_realloc.pgf  vector_realloc_copy.pgf  vector_with_contig_mem.tex  vector_with_noncontig_mem.tex
training-2018/slides/: presentation.md
training-2018/slides/resources/: impedance_uml.tex  vector_realloc_move.pgf
training-2018/slides/template/: default.scss  index.html  style.scss  style.scss.bak
training-2018/template/: index.html  style.scss
